# ChangeLog for dev-java/ibm-jre-bin
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/ibm-jre-bin/ChangeLog,v 1.139 2009/11/17 16:18:19 ranger Exp $

  17 Nov 2009; Brent Baude <ranger@gentoo.org> ibm-jre-bin-1.6.0.6.ebuild:
  Marking ibm-jre-bin-1.6.0.6 ppc64 for bug 287490

  03 Nov 2009; Vlastimil Babka <caster@gentoo.org>
  ibm-jre-bin-1.6.0.6.ebuild:
  Pull libXt on all arches, bug #290506.

  25 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
  ibm-jre-bin-1.6.0.6.ebuild:
  Stable for ppc, bug 287490

*ibm-jre-bin-1.6.0.6 (18 Oct 2009)

  18 Oct 2009; Vlastimil Babka <caster@gentoo.org>
  -ibm-jre-bin-1.6.0.4.ebuild, +ibm-jre-bin-1.6.0.6.ebuild:
  Version bump, security bug #287490.

  15 Oct 2009; Mounir Lamouri <volkmar@gentoo.org>
  ibm-jre-bin-1.5.0.10.ebuild:
  Stabilizing for ppc, bug 287490

  03 Oct 2009; Christian Faulhammer <fauli@gentoo.org>
  ibm-jre-bin-1.5.0.10.ebuild:
  stable x86, security bug 287490

  03 Oct 2009; Brent Baude <ranger@gentoo.org> ibm-jre-bin-1.5.0.10.ebuild:
  Marking ibm-jre-bin-1.5.0.10 ppc64 for bug 287490

  06 Sep 2009; Brent Baude <ranger@gentoo.org> ibm-jre-bin-1.6.0.5.ebuild:
  Marking ibm-jre-bin-1.6.0.5 ppc64 for bug 278315

  09 Aug 2009; nixnut <nixnut@gentoo.org> ibm-jre-bin-1.6.0.5.ebuild:
  ppc stable #278315

*ibm-jre-bin-1.5.0.10 (01 Aug 2009)

  01 Aug 2009; Vlastimil Babka <caster@gentoo.org>
  +ibm-jre-bin-1.5.0.10.ebuild:
  Version bump.

  07 Jul 2009; Diego E. Pettenò <flameeyes@gentoo.org>
  ibm-jre-bin-1.6.0.5.ebuild:
  Use elog for fetch error.

*ibm-jre-bin-1.6.0.5 (19 Jun 2009)

  19 Jun 2009; Vlastimil Babka <caster@gentoo.org>
  +ibm-jre-bin-1.6.0.5.ebuild:
  Version bump.

  29 May 2009; Vlastimil Babka <caster@gentoo.org>
  -ibm-jre-bin-1.4.2.12.ebuild, ibm-jre-bin-1.4.2.13.ebuild,
  -ibm-jre-bin-1.5.0.9.ebuild, ibm-jre-bin-1.5.0.9-r1.ebuild,
  ibm-jre-bin-1.6.0.4.ebuild: