@@ -1,10 +1,6 @@
 AUX ibm-jre-bin-1.4.env 976 RMD160 64fea85f255b474072a5633b34e087e00ab0ea2d SHA1 999b7d26a84f3ddbde787bffa62a2549b76da1fe SHA256 4d11de0d1018ab18f7f9e2e09748feab5f49e27f303d6c4d755cb6df0375ede2
 AUX ibm-jre-bin-1.5.env 996 RMD160 732bdc06efdf693093b876f9ed1a49842f38bd26 SHA1 08eb88d122216062193cdc36f3b82ee0b859626a SHA256 ddeeec0fd9ab384ad4236659b0c5bb8789c086f51e5fe3e7a9c80c6a3fd1686f
 AUX ibm-jre-bin-1.6.env 1769 RMD160 63d50da16bd3d1587db7e7d7d1c3974ed1d0c181 SHA1 30325a578b002a010ec9a28d5b965f7af38e559b SHA256 78bcd9d65d4ad872b880745708a86a5c75bb3bc0f71cf17fe72e4e53fbc5961f
-DIST IBMJava2-JRE-1.4.2-13.0.ppc.tgz 49186570 RMD160 8b8e26da4d5902a6ef8e50df3300507453c4db2b SHA1 63ecff807334832c15423881896948824a381f3b SHA256 b21499f41b47254d6506aad9d1ad99c1c6e25549c4f40d122e584518653e3d14
-DIST IBMJava2-JRE-1.4.2-13.0.ppc64.tgz 47412949 RMD160 79f1cc51417afd0291dd834c595c55c47668700b SHA1 8022605b4edfdd7b6a29a336fec128c909cf1497 SHA256 4a89dc9bf4b6ed4cb22a69f3c3bf2010cb68280e0dbf7f5cc8677b153ab9fb36
-DIST IBMJava2-JRE-1.4.2-13.0.tgz 40474635 RMD160 9cca37d88f70806cd90fb3e1659b3a0542bc33c0 SHA1 fd2546194ef808ee147c0c343df9f1ea21945e6d SHA256 7cab4b51a4ccc8ea2464ea25946a9eed7a996a2f88cb312e16f141bd1bae814d
-DIST IBMJava2-JRE-AMD64-1.4.2-13.0.x86_64.tgz 39298602 RMD160 e9b13cfa33e9a20278ca89083c3f98c50c998b64 SHA1 3cba0fa88810a6860a78fccda23991cfed965a2a SHA256 c69024d613fc0a99c75f3a78f1754d590e57d03fc4ccd4e6948b355217530b5b
 DIST ibm-java-jre-6.0-5.0-linux-i386.tgz 62076643 RMD160 9bcf8b12847913e3d12980c8f92f0c5c761d1935 SHA1 76181ecf978753733126421fe941c4d46530b8aa SHA256 8b6e4f10cab411bdaf52cb613dab484318526d3b43fbe42976d6cb7bf5a804f7
 DIST ibm-java-jre-6.0-5.0-linux-ppc.tgz 64190693 RMD160 ef6fd528d7aa41ec7a9a1eb592c9a664832f10a0 SHA1 735d98c65f4c8e8fb548b97c51625dfa5a4e09fd SHA256 d0648da42d9a745eb1e2afbc2d9bcd28656fd702c51cf4257ff142853b68a60d
 DIST ibm-java-jre-6.0-5.0-linux-ppc64.tgz 73634048 RMD160 e3c65399d8705603a2de0aabcb40e5e57a6998c9 SHA1 7fc2a2b196b4dc7828f7a6c365e56af588928868 SHA256 6f1513077486c7e0109c786955b3e55b7d01865a37ea49162e0d94aa272b3f05
@@ -21,10 +17,9 @@ DIST ibm-java2-jre-5.0-9.0-linux-i386.tgz 44551455 RMD160 e38176081cd34d3e3e2773
 DIST ibm-java2-jre-5.0-9.0-linux-ppc.tgz 51158978 RMD160 d3f53b1640d2df81b9c227b2f59e9d71b420a2bd SHA1 e1d4a2f46ea36fcf9dad5d725a3142abbb03903d SHA256 2ba311d3ca10165f7385866c1a501fe65649ae2de072f6212b260ec70e7325f8
 DIST ibm-java2-jre-5.0-9.0-linux-ppc64.tgz 50718662 RMD160 590e471cee2e60350c3eee09279534d52acab0cc SHA1 9c6df0016a05bbeeabb75600639d9300bcb3d7c7 SHA256 af779c837408141a3b28b4eb279a690fe14c91a059cb525f4cd480dc2eb30b4f
 DIST ibm-java2-jre-5.0-9.0-linux-x86_64.tgz 46619220 RMD160 7aa44e2aadc5218ffa6bc6f880e35197e1645ad1 SHA1 5ded881afc7b7bec561c01e73ac8d984cfcbf2b3 SHA256 0642663ba7d0b9bfacd0abc9e1f4a1da80fe911ed571e82868ebec80669d853d
-EBUILD ibm-jre-bin-1.4.2.13.ebuild 3493 RMD160 780e128191ae82fb82f639b81aef33bb80c89dd9 SHA1 398d719ca7ecdc0b44d0f161052cecef9ef971f1 SHA256 d50062d478dfb0ad2046c4453b679ad0393141fa7f545dacfa257737de98a0f4
 EBUILD ibm-jre-bin-1.5.0.10.ebuild 6303 RMD160 68e33c080b8a569f8077948e91d437ee078635c4 SHA1 ffad4be1ab1d05403f0de2b64a149531e0c90738 SHA256 715dedd37bc8e453b56153de84dcf6e570ff356e49549aed45bc0e0070dabfa8
 EBUILD ibm-jre-bin-1.5.0.9-r1.ebuild 6303 RMD160 ff889ebeb426ff12a30ce7524bf85a2a32fa29d4 SHA1 ab34fe36373c53a98441cf534b934ffc273a196d SHA256 01850eff38f78c383988b54eaa2add9b58263a8d9121131e6ac0e4290e547189
 EBUILD ibm-jre-bin-1.6.0.5.ebuild 5979 RMD160 883368c622423094304d6bbb285cfee081d43ccf SHA1 566aaf714caf94494281ed1cdfb30635d0364efe SHA256 182c8393c29cfd7159f37443b2a65fb0e37bbe66675351997cfc131d72c2d2d6
 EBUILD ibm-jre-bin-1.6.0.6.ebuild 5968 RMD160 a7259ab422e69f13f0ada1baa77b202362e8c099 SHA1 c06385ab08ba6d78dec8a5fd95734f7adefcd309 SHA256 6e1f0609b295ed6e9e4f306ef6cc41eabea3dde120b0725ba2845bc35027aa34
-MISC ChangeLog 20849 RMD160 58985ff96d401a96894a57cecc78340d00041d97 SHA1 dad31807e56fc36c6e5f54724b5288ddbcf38793 SHA256 736a0cb342a4d8e181bc79f7a4a56dc3a99134216928cc18b9c84b79f1fef85a
+MISC ChangeLog 20969 RMD160 b28db28e558bb96c5025c836d8691cd24d469006 SHA1 bf3a1477f3d0dd501376257e6cfa36ca20ae8098 SHA256 dbd99772bbdb0e2687461acf6aea5a87625c5056abf995fc1292413d7e5b9aad
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
